Set default color of text to alpha=0 and updated animation to keep the state of the last keyframe. Both of these help prevent streams from "bleeding" through to streams behind them.

--- a/src/matrix.css
+++ b/src/matrix.css
@@ -5,7 +5,7 @@ div {
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 2em;
     width: 2em;
-    color: black;
+    color: rgba(0,0,0,0);
     position: absolute;
     top: 0px;
 }
